IJPL-207762 [completion] cleanup
GitOrigin-RevId: a6f691269f39113f05164a19a52ef113deebc985